# myproj

./: api-test.http  export_poetry.sh  pyproject.toml  requirements.dev.txt  requirements.prob.txt  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile.py  0003_user_following_set.py
accounts/templates/accounts/: profile.html
accounts/templates/accounts/welcome_email/: content.txt  subject.txt
accounts/tests/: factories.py  test_api.py
blog/: api.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: index.html
blog/tests/: factories.py  test_api.py
config/: asgi.py  settings.py  urls.py
core/: mixins.py  pagination.py  permissions.py  renderers.py  urls.py
core/src-django-components/carousel/: carousel.css  carousel.html  carousel.js  carousel.py
core/src-django-components/image_overlay/: image_overlay.css  image_overlay.html  image_overlay.py
core/src-django-components/modal_form/: modal_form.js
core/static/htmx/ext/: hx-get-with-timestamp.js
core/templates/: _crispy_form.html  base.html  crispy_form.html  nextjs_base.html  root.html
core/templates/core/: base.html  root.html
core/templatetags/: uuid_tags.py
html/: csr-apicall.html  csr.html  react.html
photolog/: admin.py  forms.py  models.py  urls.py  views.py
photolog/migrations/: 0001_initial.py  0002_alter_note_options_note_tags.py  0003_comment.py  0004_alter_comment_options.py
photolog/templates/photolog/: _comment_form.html  _comment_list.html  _note_list.html  _user_follower.html  base.html  index.html  note_detail.html  user_list.html  user_page.html
requirements/: common.txt  dev.txt  prob.txt  test.txt
