[tool.poetry]
name = "myproj"
version = "0.1.0"
description = ""
authors = ["zion <0o0w0d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
django-template-partials = "^24.2"
django-htmx = "^1.18.0"
django-crispy-forms = "^2.2"
django-components = "^0.84"
crispy-bootstrap5 = "^2024.2"
pillow = "^10.4.0"
django-lifecycle = "^1.2.4"
django-taggit = "^5.0.1"
djangorestframework = "^3.15.2"
faker = "^26.0.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
wordcloud = "^1.9.3"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.5"
ipython = "^8.26.0"


[tool.poetry.group.prob.dependencies]
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-testdox = "^3.1.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
